2011-07-19  zhaoding   <zhaoding@gmail.com>
	* 重构了radios标签
	* 增加了checkboxes标签
	* grid增加了emptyMsg支持

2011-07-15  duantihua   <chaostone.duan@gmail.com>
	* beangle-model增加了StringIdEntity和StringIdObject接口，支持对实体进行区分对待和处理
	* beangle-model中EntityDao增加了save接口
	* beangle-ems/emsapp中增加了BusinessEvent及其handler
	* beangle-ems/emsapp中增加了dictionary
	* beangle-ems/emsapp中增加了logentry??
	* beangle-struts2-view增加了email,reset,tabs标签
	* beangle-struts2-view中datepicker增加了内置的date\datetime的format支持
	* beangle-struts2-view中grid支持refresh定时刷新属性
	* beangle-struts2-view中password内置了maxlength=10
	* beangle-struts2-view中select2内置了validity支持
	* list主题的form内置了b.messages
	* 为了防止b.messages的多次显示，加入了clear参数
	* beangle-struts-convention中的DispatchAction增加了addFlashMessage(key,Object...args)，以及不加消息直接调用的redirect(string method)方法
	* beangle-struts-convention中的DispatchAction中增加addFlashMessageNow支持forward消息。
	* beangle-struts-convention中的EntityDrivenAction中支持以key值形式描述导出属性，如code:common.code,name:common.name.

2011-07-01  duantihua   <chaostone.duan@gmail.com>
	* beangle-model增加了LoggingEntity和FlashEntity接口，支持对实体进行区分对待和处理

2011-06-25  duantihua   <chaostone.duan@gmail.com>
	* 增加了gridfilter标签
	* 降低beangle-struts2-lagecy的外部依赖性为0
	* 移动beangle-struts2-convention关于freemarker的代码到beangle-struts2-view包中
	* 修复了[@b.a标签不支持id属性的错误
	* 修复了当没有数据时，grid没有显示标题的缺陷
	* 增加了用户信息中的生效和过期时间、密码过期时间
	* 增加了EnabledEntity

2011-06-12  duantihua   <chaostone.duan@gmail.com>
	* 移动convention-route.properties,从META-INF/到META-INF/beangle/
	* 移动全局table.properties到beangle/,局部table.properties从META-INF/移动到META-INF/beangle/
	* 重命名资源	/captcha/image-->/security/captcha,/staticfile-->/system/staticfile
	* 独立了ems-web包，内容包含公共action,标签，convention配置

2011-06-08  duantihua   <chaostone.duan@gmail.com>
	* 修复了form的ajax提交在ie6,ie7下会自动显示隐藏的Input
	* 修复了b.select不声明items，系统报错的bug

2011-06-05  duantihua   <chaostone.duan@gmail.com>
	* 增强了security菜单管理的功能，增加级联调整顺序的功能

2011-05-19  duantihua   <chaostone.duan@gmail.com>
	* 修复了b.boxcol,b.textarea的属性错误