@@ -6,7 +6,7 @@
 		[@b.form action="!save" title="ui.groupInfo" theme="list"]
 			[@b.textfield name="userGroup.name" label="common.name" value="${userGroup.name!}" required="true" maxlength="50"/]
 			[@b.radios label="common.status"  name="userGroup.enabled"value=userGroup.enabled items="1:action.activate,0:action.freeze"/]
-			[@b.select label="适用身份" required="true"name="userGroup.category.id" value=userGroup.category.id!  style="width:100px;" items=categories option="id,title"/]
+			[@b.select label="适用身份" required="true"name="userGroup.category.id" value=(userGroup.category.id)!  style="width:100px;" items=categories option="id,title"/]
 			[@b.textfield name="userGroup.remark" label="common.remark" value="${userGroup.remark!}" maxlength="50"/]
 			[@b.formfoot]
 				<input type="hidden" name="userGroup.id" value="${userGroup.id!}" />
