@@ -1,5 +1,5 @@
 [#ftl/][@b.head/]
-[@b.grid items="ruleParameters" var="ruleParameter"]
+[@b.grid items=ruleParameters var="ruleParameter"]
 	[@b.gridbar]
 		bar.addItem("${b.text("action.new")}",action.add());
 		bar.addItem("${b.text("action.modify")}",action.edit());
