@@ -5,15 +5,13 @@
 <thead class="gridhead">
 [#if tag.filterable="true" || tag.filters?size>0]
 <tr>
-	<th class="gridselect-top">[@b.submit id="${tag.id}_filter_submit" style="background-image: url(${b.theme.iconurl('actions/edit-find.png')});background-repeat: no-repeat;background-color:transparent;width:16px;height:16px;border-style:none;"/]</th>
+	<th class="gridselect-top">[@b.submit id="${tag.id}_filter_submit" class="grid-filter-submit" value=""/]</th>
 	[#list tag.cols as cln]
 	[#if !(cln.type??)]
 	[#if tag.isFilterable(cln)]
 	<th title="${cln.title}" [#if cln.width??]width="${cln.width}"[/#if] style="padding-left:3px">
 	[#if tag.filters[cln.property]??]${tag.filters[cln.property]}[#else]
-	<div style="margin-right:6px">
-	<input type="text" name="${cln.propertyPath}"  maxlength="100" value="${(Parameters[cln.propertyPath]!)?html}" style="width:100%;"/>
-	</div>
+	<div style="margin-right:6px"><input type="text" name="${cln.propertyPath}"  maxlength="100" value="${(Parameters[cln.propertyPath]!)?html}" style="width:100%;"/></div>
 	[/#if]
 	</th>
 	[#else]<th [#if cln.width??]width="${cln.width}"[/#if]></th>[/#if]
